--- a/bot.service
+++ b/bot.service
@@ -7,8 +7,9 @@ After=network.target
 Type=simple
 User=root
 WorkingDirectory=/home/IloveViktoria
-ExecStart=python3 /home/IloveViktoria/main.py
+ExecStart=python3.9 /home/IloveViktoria/main.py
 Restart=always
+RestartSec=10
 
 [Install]
 WantedBy=multi-user.target
